<resources>
    <string name="app_name">Bootstrap Manual</string>

    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="share_info">Learning Bootstrap Manual</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="manual">Manual</string>
    <string name="bootstrap">Bootstrap</string>
    <string name="getting_started">Getting Started</string>
    <string name="css">CSS</string>
    <string name="components">Components</string>
    <string name="javascript">JavaScript</string>

    <string name="open">Open in browser</string>
    <string name="drawer_title">Translations/Languages</string>

    <string name="lang_chinese" translatable="false">中文简体(Chinese)</string>
    <string name="lang_chinese_tr" translatable="false">中文繁体(Chinese Traditional)</string>
    <string name="lang_english" translatable="false">English</string>
    <string name="lang_danish" translatable="false">Dansk(Danish)</string>
    <string name="lang_french" translatable="false">Français (French)</string>
    <string name="lang_german" translatable="false">Deutsch (German)</string>
    <string name="lang_italian" translatable="false">Italiano (Italian)</string>
    <string name="lang_korean" translatable="false">한국어 (Korean)</string>
    <string name="lang_braz" translatable="false">em Português do Brasil (Brazilian Portuguese)</string>
    <string name="lang_russian" translatable="false">по-русски (Russian)</string>
    <string name="lang_spanish" translatable="false">en Español (Spanish)</string>
    <string name="lang_turkish" translatable="false">Türkçe (Turkish)</string>
    <string name="lang_ukrainian" translatable="false">українською (Ukrainian)</string>
    <string name="lang_vietnamese" translatable="false">bằng tiếng Việt (Vietnamese)</string>

    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5718760427715517/3778241385</string>
    <string name="title_activity_page">Bootstrap Manual</string>
</resources>
